# shapemate-bug

./: .gitignore  CMakeLists.txt  DEMO.md  prj.conf
src/: main.c
src/app/: main.c  main.h
src/ble/: gatt_service.c  gatt_service.h  sync_prep.c  sync_prep.h
src/fitness/: fitness_data_manager.c  fitness_data_manager.h
src/interface/: menu.c  menu.h
src/storage/: flash_fs.c  flash_fs.h
src/sync/: sync_with_companion.c  sync_with_companion.h
